Merged revisions 1467931 via svnmerge from https://svn.apache.org/repos/asf/cxf/branches/2.7.x-fixes
................
  r1467931 | sergeyb | 2013-04-15 11:41:43 +0100 (Mon, 15 Apr 2013) | 9 lines
  
  Merged revisions 1466940 via svnmerge from 
  https://svn.apache.org/repos/asf/cxf/trunk
  
  ........
    r1466940 | sergeyb | 2013-04-11 17:21:13 +0100 (Thu, 11 Apr 2013) | 1 line
    
    [CXF-4946] Using a specific URL constructor to resolve the relative references with parent segments
  ........
................


git-svn-id: https://svn.apache.org/repos/asf/cxf/branches/2.6.x-fixes@1467934 13f79535-47bb-0310-9956-ffa450edef68